--- a/LeagueManager/www/index.html
+++ b/LeagueManager/www/index.html
@@ -15,7 +15,7 @@
     <link href="css/index.css" rel="stylesheet" />
 </head>
 <body>
-    <p>Hallo, Ihre Anwendung ist bereit!</p>
+    <p>sdfyx!</p>
 
     <!-- Cordova-Verweis, wird Ihrer App beim Erstellen hinzugefügt. -->
     <script src="cordova.js"></script>
