--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -23,7 +23,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="#/"><img ng-show="favicon != null" src="{{favicon}}" style="float: left;"> {{title}}</a>
+				<a class="navbar-brand" href="#/">{{title}}</a>
 			</div>
 			<div class="collapse navbar-collapse" id="myNavbar">
 				<ul class="nav navbar-nav">
@@ -32,6 +32,7 @@
 					</li>
 
 					<li><a href="#/Matches">Spiele</a></li>
+					<li ng-show="hasRight('editMasterData')"><a href="#/Teams">Mannschaften</a></li>
 					<li><a href="#/Player/RankSaison">Torjäger</a></li>
 					
 					<li ng-show="hasRight('userManagement')"><a href="#/Users">Benutzer</a></li>
@@ -82,7 +83,6 @@
 	<script src="bower_components/angular-sanitize/angular-sanitize.min.js"></script>
 
 	<script src="assets/libs/php_crud_api_transform.js"></script>
-	<script src="assets/libs/ckeditor/ckeditor.js"></script>
 	<script src="assets/libs/ng-ckeditor.min.js"></script>
 
 	<script src="app/app.js"></script>
@@ -105,6 +105,7 @@
 	<!-- @endif -->	
 	
 	<!-- include in all cases -->
+	<script src="assets/libs/ckeditor/ckeditor.js"></script>
 	<script src="config.js"></script>
 	
 	<script>
